# doge-utility

./: .gitignore  CMakeLists.txt  DogeUtility.cpp  DogeUtility.h  README.en.md  README.md  Utility.cpp  Utility.h
vs/: DogeUtility.sln  DogeUtility.vcxproj  DogeUtility.vcxproj.filters  ReadMe.txt  stdafx.cpp
